backends/liquid/anvil-liquid-derive/tests/compile_fail/incorrect_format.stderr
error: unexpected literal in nested attribute, expected ident
 --> tests/compile_fail/incorrect_format.rs
  |
  | #[template(123)]  // Using a number instead of a string literal
  |            ^^^
